[package]
name = "rotato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rand = "0.8.5"
bevy_egui = "0.20.2"
web-sys = { version = "0.3.61", features = ["Window"] }

[profile.release]
opt-level = "s"
lto = "thin"

[[bin]]
name = "index"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
